lexers/src/main/java/com/itsaky/androidide/lexers/xml/XMLParser.java
// Generated from XMLParser.g4 by ANTLR 4.9.3
package com.itsaky.androidide.lexers.xml;

import org.antlr.v4.runtime.NoViableAltException;
import org.antlr.v4.runtime.Parser;
import org.antlr.v4.runtime.ParserRuleContext;
import org.antlr.v4.runtime.RecognitionException;
import org.antlr.v4.runtime.RuntimeMetaData;
import org.antlr.v4.runtime.Token;
import org.antlr.v4.runtime.TokenStream;
import org.antlr.v4.runtime.Vocabulary;
import org.antlr.v4.runtime.VocabularyImpl;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class XMLParser extends Parser {
  public static final int COLON = 1,
      COMMENT = 2,
      CDATA = 3,
      DTD = 4,
      EntityRef = 5,
      CharRef = 6,
      SEA_WS = 7,
      OPEN = 8,
      OPEN_SLASH = 9,
      XMLDeclOpen = 10,
      TEXT = 11,
      CLOSE = 12,
      SPECIAL_CLOSE = 13,
      SLASH_CLOSE = 14,
      SLASH = 15,
      EQUALS = 16,
      STRING = 17,
      Name = 18,
      S = 19,
      PI = 20;
  public static final int RULE_document = 0,
      RULE_prolog = 1,
      RULE_content = 2,
      RULE_element = 3,
      RULE_nonEmptyClosingElement = 4,
      RULE_emptyClosingElement = 5,
      RULE_reference = 6,
      RULE_attribute = 7,
      RULE_prefix = 8,
      RULE_chardata = 9,
      RULE_misc = 10;
  public static final String[] ruleNames = makeRuleNames();
  /**
   * @deprecated Use {@link #VOCABULARY} instead.
   */
  @Deprecated public static final String[] tokenNames;
  public static final ATN _ATN = new ATNDeserializer().deserialize(_serializedATN.toCharArray());
  protected static final DFA[] _decisionToDFA;
  protected static final PredictionContextCache _sharedContextCache = new PredictionContextCache();
  private static final String[] _LITERAL_NAMES = makeLiteralNames();
  private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
  public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

  static {
    RuntimeMetaData.checkVersion("4.9.3", RuntimeMetaData.VERSION);
  }

  static {
    tokenNames = new String[_SYMBOLIC_NAMES.length];
    for (int i = 0; i < tokenNames.length; i++) {
      tokenNames[i] = VOCABULARY.getLiteralName(i);
      if (tokenNames[i] == null) {
        tokenNames[i] = VOCABULARY.getSymbolicName(i);
      }

      if (tokenNames[i] == null) {
        tokenNames[i] = "<INVALID>";
      }
    }
  }

  static {
    _decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
    for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
      _decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
    }
  }

  public XMLParser(TokenStream input) {
    super(input);
    _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
  }

  private static String[] makeRuleNames() {
    return new String[] {
      "document", "prolog", "content", "element", "nonEmptyClosingElement",
      "emptyClosingElement", "reference", "attribute", "prefix", "chardata",
      "misc"
    };
  }

  private static String[] makeLiteralNames() {
    return new String[] {
      null, "':'", null, null, null, null, null, null, "'<'", "'</'", null, null, "'>'", null,
      "'/>'", "'/'", "'='"
    };
  }

  private static String[] makeSymbolicNames() {
    return new String[] {
      null,
      "COLON",
      "COMMENT",
      "CDATA",
      "DTD",
      "EntityRef",
      "CharRef",
      "SEA_WS",
      "OPEN",
      "OPEN_SLASH",
      "XMLDeclOpen",
      "TEXT",
      "CLOSE",
      "SPECIAL_CLOSE",
      "SLASH_CLOSE",
      "SLASH",
      "EQUALS",
      "STRING",
      "Name",
      "S",
      "PI"
    };
  }

  @Override
  @Deprecated
  public String[] getTokenNames() {
    return tokenNames;
  }

  @Override
  public String[] getRuleNames() {
    return ruleNames;
  }

  @Override
  public Vocabulary getVocabulary() {
    return VOCABULARY;
  }

  @Override
  public String getSerializedATN() {
    return _serializedATN;
  }

  @Override
  public String getGrammarFileName() {
    return "XMLParser.g4";
  }

  @Override
  public ATN getATN() {
    return _ATN;
  }

  public final DocumentContext document() throws RecognitionException {
    DocumentContext _localctx = new DocumentContext(_ctx, getState());
    enterRule(_localctx, 0, RULE_document);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(23);
        _errHandler.sync(this);
        _la = _input.LA(1);
        if (_la == XMLDeclOpen) {
          {
            setState(22);
            prolog();
          }
        }

        setState(28);
        _errHandler.sync(this);
        _la = _input.LA(1);
        while ((((_la) & ~0x3f) == 0
            && ((1L << _la) & ((1L << COMMENT) | (1L << SEA_WS) | (1L << PI))) != 0)) {
          {
            {
              setState(25);
              misc();
            }
          }
          setState(30);
          _errHandler.sync(this);
          _la = _input.LA(1);
        }
        setState(31);
        element();
        setState(35);
        _errHandler.sync(this);
        _la = _input.LA(1);
        while ((((_la) & ~0x3f) == 0
            && ((1L << _la) & ((1L << COMMENT) | (1L << SEA_WS) | (1L << PI))) != 0)) {
          {
            {
              setState(32);
              misc();
            }
          }
          setState(37);
          _errHandler.sync(this);
          _la = _input.LA(1);
        }
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public final PrologContext prolog() throws RecognitionException {
    PrologContext _localctx = new PrologContext(_ctx, getState());
    enterRule(_localctx, 2, RULE_prolog);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(38);
        match(XMLDeclOpen);
        setState(42);
        _errHandler.sync(this);
        _la = _input.LA(1);
        while (_la == Name) {
          {
            {
              setState(39);
              attribute();
            }
          }
          setState(44);
          _errHandler.sync(this);
          _la = _input.LA(1);
        }
        setState(45);
        match(SPECIAL_CLOSE);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public final ContentContext content() throws RecognitionException {
    ContentContext _localctx = new ContentContext(_ctx, getState());
    enterRule(_localctx, 4, RULE_content);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(48);
        _errHandler.sync(this);
        _la = _input.LA(1);
        if (_la == SEA_WS || _la == TEXT) {
          {
            setState(47);
            chardata();
          }
        }

        setState(62);
        _errHandler.sync(this);
        _la = _input.LA(1);
        while ((((_la) & ~0x3f) == 0
            && ((1L << _la)
                    & ((1L << COMMENT)
                        | (1L << CDATA)
                        | (1L << EntityRef)
                        | (1L << CharRef)
                        | (1L << OPEN)
                        | (1L << PI)))
                != 0)) {
          {
            {
              setState(55);
              _errHandler.sync(this);
              switch (_input.LA(1)) {
                case OPEN:
                  {
                    setState(50);
                    element();
                  }
                  break;
                case EntityRef:
                case CharRef:
                  {
                    setState(51);
                    reference();
                  }
                  break;
                case CDATA:
                  {
                    setState(52);
                    match(CDATA);
                  }
                  break;
                case PI:
                  {
                    setState(53);
                    match(PI);
                  }
                  break;
                case COMMENT:
                  {
                    setState(54);
                    match(COMMENT);
                  }
                  break;
                default:
                  throw new NoViableAltException(this);
              }
              setState(58);
              _errHandler.sync(this);
              _la = _input.LA(1);
              if (_la == SEA_WS || _la == TEXT) {
                {
                  setState(57);
                  chardata();
                }
              }
            }
          }
          setState(64);
          _errHandler.sync(this);
          _la = _input.LA(1);
        }
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public final ElementContext element() throws RecognitionException {
    ElementContext _localctx = new ElementContext(_ctx, getState());
    enterRule(_localctx, 6, RULE_element);
    try {
      setState(67);
      _errHandler.sync(this);
      switch (getInterpreter().adaptivePredict(_input, 8, _ctx)) {
        case 1:
          enterOuterAlt(_localctx, 1);
          {
            setState(65);
            nonEmptyClosingElement();
          }
          break;
        case 2:
          enterOuterAlt(_localctx, 2);
          {
            setState(66);
            emptyClosingElement();
          }
          break;
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public final NonEmptyClosingElementContext nonEmptyClosingElement() throws RecognitionException {
    NonEmptyClosingElementContext _localctx = new NonEmptyClosingElementContext(_ctx, getState());
    enterRule(_localctx, 8, RULE_nonEmptyClosingElement);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(69);
        match(OPEN);
        setState(70);
        match(Name);
        setState(74);
        _errHandler.sync(this);
        _la = _input.LA(1);
        while (_la == Name) {
          {
            {
              setState(71);
              attribute();
            }
          }
          setState(76);
          _errHandler.sync(this);
          _la = _input.LA(1);
        }
        setState(77);
        match(CLOSE);
        setState(78);
        content();
        setState(79);
        match(OPEN_SLASH);
        setState(80);
        match(Name);
        setState(81);
        match(CLOSE);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public final EmptyClosingElementContext emptyClosingElement() throws RecognitionException {
    EmptyClosingElementContext _localctx = new EmptyClosingElementContext(_ctx, getState());
    enterRule(_localctx, 10, RULE_emptyClosingElement);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(83);
        match(OPEN);
        setState(84);
        match(Name);
        setState(88);
        _errHandler.sync(this);
        _la = _input.LA(1);
        while (_la == Name) {
          {
            {
              setState(85);
              attribute();
            }
          }
          setState(90);
          _errHandler.sync(this);
          _la = _input.LA(1);
        }
        setState(91);
        match(SLASH_CLOSE);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public final ReferenceContext reference() throws RecognitionException {
    ReferenceContext _localctx = new ReferenceContext(_ctx, getState());
    enterRule(_localctx, 12, RULE_reference);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(93);
        _la = _input.LA(1);
        if (!(_la == EntityRef || _la == CharRef)) {
          _errHandler.recoverInline(this);
        } else {
          if (_input.LA(1) == Token.EOF) matchedEOF = true;
          _errHandler.reportMatch(this);
          consume();
        }
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public final AttributeContext attribute() throws RecognitionException {
    AttributeContext _localctx = new AttributeContext(_ctx, getState());
    enterRule(_localctx, 14, RULE_attribute);
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(96);
        _errHandler.sync(this);
        switch (getInterpreter().adaptivePredict(_input, 11, _ctx)) {
          case 1:
            {
              setState(95);
              prefix();
            }
            break;
        }
        setState(98);
        match(Name);
        setState(99);
        match(EQUALS);
        setState(100);
        match(STRING);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public final PrefixContext prefix() throws RecognitionException {
    PrefixContext _localctx = new PrefixContext(_ctx, getState());
    enterRule(_localctx, 16, RULE_prefix);
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(102);
        match(Name);
        setState(103);
        match(COLON);
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public final ChardataContext chardata() throws RecognitionException {
    ChardataContext _localctx = new ChardataContext(_ctx, getState());
    enterRule(_localctx, 18, RULE_chardata);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(105);
        _la = _input.LA(1);
        if (!(_la == SEA_WS || _la == TEXT)) {
          _errHandler.recoverInline(this);
        } else {
          if (_input.LA(1) == Token.EOF) matchedEOF = true;
          _errHandler.reportMatch(this);
          consume();
        }
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public final MiscContext misc() throws RecognitionException {
    MiscContext _localctx = new MiscContext(_ctx, getState());
    enterRule(_localctx, 20, RULE_misc);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      {
        setState(107);
        _la = _input.LA(1);
        if (!((((_la) & ~0x3f) == 0
            && ((1L << _la) & ((1L << COMMENT) | (1L << SEA_WS) | (1L << PI))) != 0))) {
          _errHandler.recoverInline(this);
        } else {
          if (_input.LA(1) == Token.EOF) matchedEOF = true;
          _errHandler.reportMatch(this);
          consume();
        }
      }
    } catch (RecognitionException re) {
      _localctx.exception = re;
      _errHandler.reportError(this, re);
      _errHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  public static class DocumentContext extends ParserRuleContext {
    public DocumentContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    public ElementContext element() {
      return getRuleContext(ElementContext.class, 0);
    }

    public PrologContext prolog() {
      return getRuleContext(PrologContext.class, 0);
    }

    public List<MiscContext> misc() {
      return getRuleContexts(MiscContext.class);
    }

    public MiscContext misc(int i) {
      return getRuleContext(MiscContext.class, i);
    }

    @Override
    public int getRuleIndex() {
      return RULE_document;
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof XMLParserVisitor)
        return ((XMLParserVisitor<? extends T>) visitor).visitDocument(this);
      else return visitor.visitChildren(this);
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof XMLParserListener) ((XMLParserListener) listener).enterDocument(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof XMLParserListener) ((XMLParserListener) listener).exitDocument(this);
    }
  }

  public static class PrologContext extends ParserRuleContext {
    public PrologContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    public TerminalNode XMLDeclOpen() {
      return getToken(XMLParser.XMLDeclOpen, 0);
    }

    public TerminalNode SPECIAL_CLOSE() {
      return getToken(XMLParser.SPECIAL_CLOSE, 0);
    }

    public List<AttributeContext> attribute() {
      return getRuleContexts(AttributeContext.class);
    }

    public AttributeContext attribute(int i) {
      return getRuleContext(AttributeContext.class, i);
    }

    @Override
    public int getRuleIndex() {
      return RULE_prolog;
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof XMLParserVisitor)
        return ((XMLParserVisitor<? extends T>) visitor).visitProlog(this);
      else return visitor.visitChildren(this);
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof XMLParserListener) ((XMLParserListener) listener).enterProlog(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof XMLParserListener) ((XMLParserListener) listener).exitProlog(this);
    }
  }

  public static class ContentContext extends ParserRuleContext {
    public ContentContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    public List<ChardataContext> chardata() {
      return getRuleContexts(ChardataContext.class);
    }

    public ChardataContext chardata(int i) {
      return getRuleContext(ChardataContext.class, i);
    }

    public List<ElementContext> element() {
      return getRuleContexts(ElementContext.class);
    }

    public ElementContext element(int i) {
      return getRuleContext(ElementContext.class, i);
    }

    public List<ReferenceContext> reference() {
      return getRuleContexts(ReferenceContext.class);
    }

    public ReferenceContext reference(int i) {
      return getRuleContext(ReferenceContext.class, i);
    }

    public List<TerminalNode> CDATA() {
      return getTokens(XMLParser.CDATA);
    }

    public TerminalNode CDATA(int i) {
      return getToken(XMLParser.CDATA, i);
    }

    public List<TerminalNode> PI() {
      return getTokens(XMLParser.PI);
    }

    public TerminalNode PI(int i) {
      return getToken(XMLParser.PI, i);
    }

    public List<TerminalNode> COMMENT() {
      return getTokens(XMLParser.COMMENT);
    }

    public TerminalNode COMMENT(int i) {
      return getToken(XMLParser.COMMENT, i);
    }

    @Override
    public int getRuleIndex() {
      return RULE_content;
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof XMLParserVisitor)
        return ((XMLParserVisitor<? extends T>) visitor).visitContent(this);
      else return visitor.visitChildren(this);
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof XMLParserListener) ((XMLParserListener) listener).enterContent(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof XMLParserListener) ((XMLParserListener) listener).exitContent(this);
    }
  }

  public static class ElementContext extends ParserRuleContext {
    public ElementContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    public NonEmptyClosingElementContext nonEmptyClosingElement() {
      return getRuleContext(NonEmptyClosingElementContext.class, 0);
    }

    public EmptyClosingElementContext emptyClosingElement() {
      return getRuleContext(EmptyClosingElementContext.class, 0);
    }

    @Override
    public int getRuleIndex() {
      return RULE_element;
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof XMLParserVisitor)
        return ((XMLParserVisitor<? extends T>) visitor).visitElement(this);
      else return visitor.visitChildren(this);
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof XMLParserListener) ((XMLParserListener) listener).enterElement(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof XMLParserListener) ((XMLParserListener) listener).exitElement(this);
    }
  }

  public static class NonEmptyClosingElementContext extends ParserRuleContext {
    public NonEmptyClosingElementContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    public TerminalNode OPEN() {
      return getToken(XMLParser.OPEN, 0);
    }

    public List<TerminalNode> Name() {
      return getTokens(XMLParser.Name);
    }

    public TerminalNode Name(int i) {
      return getToken(XMLParser.Name, i);
    }

    public List<TerminalNode> CLOSE() {
      return getTokens(XMLParser.CLOSE);
    }

    public TerminalNode CLOSE(int i) {
      return getToken(XMLParser.CLOSE, i);
    }

    public ContentContext content() {
      return getRuleContext(ContentContext.class, 0);
    }

    public TerminalNode OPEN_SLASH() {
      return getToken(XMLParser.OPEN_SLASH, 0);
    }

    public List<AttributeContext> attribute() {
      return getRuleContexts(AttributeContext.class);
    }

    public AttributeContext attribute(int i) {
      return getRuleContext(AttributeContext.class, i);
    }

    @Override
    public int getRuleIndex() {
      return RULE_nonEmptyClosingElement;
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof XMLParserVisitor)
        return ((XMLParserVisitor<? extends T>) visitor).visitNonEmptyClosingElement(this);
      else return visitor.visitChildren(this);
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof XMLParserListener)
        ((XMLParserListener) listener).enterNonEmptyClosingElement(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof XMLParserListener)
        ((XMLParserListener) listener).exitNonEmptyClosingElement(this);
    }
  }

  public static class EmptyClosingElementContext extends ParserRuleContext {
    public EmptyClosingElementContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    public TerminalNode OPEN() {
      return getToken(XMLParser.OPEN, 0);
    }

    public TerminalNode Name() {
      return getToken(XMLParser.Name, 0);
    }

    public TerminalNode SLASH_CLOSE() {
      return getToken(XMLParser.SLASH_CLOSE, 0);
    }

    public List<AttributeContext> attribute() {
      return getRuleContexts(AttributeContext.class);
    }

    public AttributeContext attribute(int i) {
      return getRuleContext(AttributeContext.class, i);
    }

    @Override
    public int getRuleIndex() {
      return RULE_emptyClosingElement;
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof XMLParserVisitor)
        return ((XMLParserVisitor<? extends T>) visitor).visitEmptyClosingElement(this);
      else return visitor.visitChildren(this);
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof XMLParserListener)
        ((XMLParserListener) listener).enterEmptyClosingElement(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof XMLParserListener)
        ((XMLParserListener) listener).exitEmptyClosingElement(this);
    }
  }

  public static class ReferenceContext extends ParserRuleContext {
    public ReferenceContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    public TerminalNode EntityRef() {
      return getToken(XMLParser.EntityRef, 0);
    }

    public TerminalNode CharRef() {
      return getToken(XMLParser.CharRef, 0);
    }

    @Override
    public int getRuleIndex() {
      return RULE_reference;
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof XMLParserVisitor)
        return ((XMLParserVisitor<? extends T>) visitor).visitReference(this);
      else return visitor.visitChildren(this);
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof XMLParserListener)
        ((XMLParserListener) listener).enterReference(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof XMLParserListener) ((XMLParserListener) listener).exitReference(this);
    }
  }

  public static class AttributeContext extends ParserRuleContext {
    public AttributeContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    public TerminalNode Name() {
      return getToken(XMLParser.Name, 0);
    }

    public TerminalNode EQUALS() {
      return getToken(XMLParser.EQUALS, 0);
    }

    public TerminalNode STRING() {
      return getToken(XMLParser.STRING, 0);
    }

    public PrefixContext prefix() {
      return getRuleContext(PrefixContext.class, 0);
    }

    @Override
    public int getRuleIndex() {
      return RULE_attribute;
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof XMLParserVisitor)
        return ((XMLParserVisitor<? extends T>) visitor).visitAttribute(this);
      else return visitor.visitChildren(this);
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof XMLParserListener)
        ((XMLParserListener) listener).enterAttribute(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof XMLParserListener) ((XMLParserListener) listener).exitAttribute(this);
    }
  }

  public static class PrefixContext extends ParserRuleContext {
    public PrefixContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    public TerminalNode Name() {
      return getToken(XMLParser.Name, 0);
    }

    public TerminalNode COLON() {
      return getToken(XMLParser.COLON, 0);
    }

    @Override
    public int getRuleIndex() {
      return RULE_prefix;
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof XMLParserVisitor)
        return ((XMLParserVisitor<? extends T>) visitor).visitPrefix(this);
      else return visitor.visitChildren(this);
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof XMLParserListener) ((XMLParserListener) listener).enterPrefix(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof XMLParserListener) ((XMLParserListener) listener).exitPrefix(this);
    }
  }

  public static class ChardataContext extends ParserRuleContext {
    public ChardataContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    public TerminalNode TEXT() {
      return getToken(XMLParser.TEXT, 0);
    }

    public TerminalNode SEA_WS() {
      return getToken(XMLParser.SEA_WS, 0);
    }

    @Override
    public int getRuleIndex() {
      return RULE_chardata;
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof XMLParserVisitor)
        return ((XMLParserVisitor<? extends T>) visitor).visitChardata(this);
      else return visitor.visitChildren(this);
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof XMLParserListener) ((XMLParserListener) listener).enterChardata(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof XMLParserListener) ((XMLParserListener) listener).exitChardata(this);
    }
  }

  public static class MiscContext extends ParserRuleContext {
    public MiscContext(ParserRuleContext parent, int invokingState) {
      super(parent, invokingState);
    }

    public TerminalNode COMMENT() {
      return getToken(XMLParser.COMMENT, 0);
    }

    public TerminalNode PI() {
      return getToken(XMLParser.PI, 0);
    }

    public TerminalNode SEA_WS() {
      return getToken(XMLParser.SEA_WS, 0);
    }

    @Override
    public int getRuleIndex() {
      return RULE_misc;
    }

    @Override
    public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
      if (visitor instanceof XMLParserVisitor)
        return ((XMLParserVisitor<? extends T>) visitor).visitMisc(this);
      else return visitor.visitChildren(this);
    }

    @Override
    public void enterRule(ParseTreeListener listener) {
      if (listener instanceof XMLParserListener) ((XMLParserListener) listener).enterMisc(this);
    }

    @Override
    public void exitRule(ParseTreeListener listener) {
      if (listener instanceof XMLParserListener) ((XMLParserListener) listener).exitMisc(this);
    }
  }
}
